--- a/public/index.html
+++ b/public/index.html
@@ -38,7 +38,7 @@
     -->
     <title>Customer Portal</title>
   </head>
-  <body>
+  <body style="background: white">
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
     <!--
