--- a/public/index.html
+++ b/public/index.html
@@ -7,8 +7,13 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Web site created using create-react-app"
+      content="Skrap - Construction Hire On-demand"
     />
+    <meta name="og:title" content="Skrap - Construction Hire On-demand" />
+    <meta name="og:description"
+          content="Skrap - Construction Hire On-demand."
+    />
+    <meta name="og:image" data-react-helmet="true" content="%PUBLIC_URL%/logo_blue.svg" />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo_blue.svg" />
     <link
       href="https://fonts.googleapis.com/css2?family=DM+Sans:wght@400;500;700&display=swap"
